ibuilder/tests/not_compile/all_variants_hidden.rs
use ibuilder::IBuilder;

#[derive(IBuilder)]
enum Enum {
    #[ibuilder(hidden)]
    Var1,
}

fn main() {}
